--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="assets/i/favicons/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Elmaks | Home</title>
+    <title>Elmaks | INICIO</title>
 
     <!-- Head includes -->
     <!-- Favicon -->
