--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
                 <div class="slide">
                     <div class="car-block">
                         <div class="img-flex">
-                            <img class="img-responsive .locationmar" src="assets/i/home/marca/HYUNDAI_B.png" id="img3" onmouseover="img3.src='assets/i/home/marca/HYUNDAI.png'" onmouseout="img3.src='assets/i/home/marca/HYUNDAI_B.png';">
+                            <img class="locationmar" src="assets/i/home/marca/HYUNDAI_B.png" id="img3" onmouseover="img3.src='assets/i/home/marca/HYUNDAI.png'" onmouseout="img3.src='assets/i/home/marca/HYUNDAI_B.png';">
                         </div>
                     </div>
                 </div>
