--- a/model-single1.html
+++ b/model-single1.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="assets/i/favicons/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Elmaks | Model Single</title>
+    <title>AMBULANCIAS | BASICAS | MEDICALIZADAS</title>
 
     <!-- Head includes -->
     <!-- Favicon -->
@@ -182,7 +182,7 @@
                 <section class="page-introduction-widget">
                     <img src="assets/i/page_intr3.jpg" class="image-responsive wow fadeInLeft" data-wow-delay="700ms" alt="Contact page">
                     <div class="page-info fadeInRight wow" data-wow-delay="800ms">
-                        <h2 class="font_one">Model single</h2>
+                        <h2 class="font_one">AMBULANCIAS</h2>
                         <p class="font_one">Meh synth Schlitz</p>
                     </div>
                 </section>
