--- a/models.html
+++ b/models.html
@@ -112,7 +112,7 @@
                                             <a href="models.html">Todos</a>
                                         </li>
                                         <li>
-                                            <a href="model-single1.html">Ambulancias</a>
+                                            <a href="model-singlea.html">Ambulancias</a>
                                         </li>
                                         <li>
                                             <a href="model-single.html">Unidades Móviles de Salud</a>
@@ -196,13 +196,13 @@
                 <!-- Models slider -->
                 <div class="models-slider owl-carousel owl-theme" id="models-slider">
                     <!-- model slide -->
-                    <a href="model-single.html" class="slide wow fadeInUpBig" data-wow-delay="200ms">
+                    <a href="model-singlea.html" class="slide wow fadeInUpBig" data-wow-delay="200ms">
                         <div class="slide-header">
                             <h3 class="model-name font_one">AMBULANCIAS</h3>
                             <span class="model-price font_two">desde $160.000.000</span>
                         </div>
                         <div class="model-content">
-                            <img src="assets/i/model-car-1.png" class="model-image" alt="Porsche Taycan 4S">
+                            <img src="assets/i/model-car-1.png" href="model-singlea.html" class="model-image" alt="Porsche Taycan 4S">
                             <div class="model-details">
                                 <ul class="technical-details-list">
                                     <li>
