--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="assets/i/favicons/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Elmaks | Contact</title>
+    <title>Industrias Axial S.A.S. | CONTACTO</title>
 
     <!-- Head includes -->
     <!-- Favicon -->
@@ -29,69 +29,69 @@
             </div>
         </div>
 
-        <!-- Call now -->
-        <div id="callNow">
-            <a href="#call-now-inner" class="callNow__icon inline not-click">
-                <i class="fas fa-phone"></i>
-                <span class="font_one">Call now</span>
-            </a>
-        </div>
+         <!-- Call now -->
+ <div id="callNow">
+    <a href="#call-now-inner" class="callNow__icon inline not-click">
+        <i class="fas fa-phone"></i>
+        <span class="font_one">Llamanos</span>
+    </a>
+</div>
 
-        <!-- Test drive -->
-        <div id="testDrive">
-            <a href="#test-drive-inner" class="testDrive__icon no-click">
-                <i class="fas fa-car"></i>
-                <span class="font_one">Test drive</span>
-            </a>
-        </div>
+<!-- Test drive -->
+<div id="testDrive">
+    <a href="#test-drive-inner" class="testDrive__icon no-click">
+        <i class="fas fa-car"></i>
+        <span class="font_one">Visitanos</span>
+    </a>
+</div>
 
-        <!-- Scroll to top -->
-        <div id="scrollTop">
-            <div class="scrollTop__icon">
-                <i class="fas fa-long-arrow-alt-up"></i>
-                <span class="font_one">To top</span>
-            </div>
-        </div>
+<!-- Scroll to top -->
+<div id="scrollTop">
+    <div class="scrollTop__icon">
+        <i class="fas fa-long-arrow-alt-up"></i>
+        <span class="font_one">Inicio</span>
+    </div>
+</div>
 
         <!-- Header -->
         <header class="header-inner-pages">
             <div class="main-header">
                 <div class="main-header--top">
-                    <!-- Logo -->
-                    <a href="http://html.superbcode.net/index.html" class="logo-2 font_one">
-                        Elmaks
-                    </a>
-        
-                    <div class="wrapper">
+                   <!-- Logo -->
+                   <a href="http://html.superbcode.net/index.html" class="navbar-brand">
+                    <img src="assets/i/home/logoax.png">
+                </a>
+    
+                <div class="wrapper">
                         <!-- Main header top wrapper -->
                         <div class="main-header-top-wrapper">
                             <!-- Main header contact -->
                             <div class="main-header--contact font_two">
                                 <div class="main-header-contact--item header-phone-box1">
                                     <i class="fas fa-clock"></i>
-                                    <span>Mon-Sat:</span>
-                                    <a href="#">07:00 - 17:00</a>
+                                    <span>Lunes - Sabado:</span>
+                                    <a href="https://goo.gl/maps/atKTWYJaA5ZfDHHm9">07:30 - 16:30</a>
                                 </div>
                                 <div class="main-header-contact--item header-phone-box2">
                                     <i class="fas fa-envelope"></i>
                                     <span>Email:</span>
-                                    <a href="#">office@elmaks.com</a>
+                                    <a href="mailto:info@industriasaxial.com"> info@industriasaxial.com</a>
                                 </div>
                                 <div class="main-header-contact--item header-phone-box3">
                                     <i class="fas fa-map-marker"></i>
-                                    <span>Address:</span>
-                                    <a href="#">LA 2250 Lexington Avenue</a>
+                                    <span>Dirección:</span>
+                                    <a href="https://goo.gl/maps/atKTWYJaA5ZfDHHm9">Calle 15 # 38 - 71 Acopi - Yumbo</a>
                                 </div>
                             </div>
                             <!-- Header order test drive -->
                             <a href="#test-drive-inner" class="main-header-test-btn font_two testDrive__icon no-click">
-                                Order test drive
+                                COTIZA
                             </a>
                         </div>
                     </div>
                     <ul class="main-header--social">
-                        <li><a href="#"><i class="fab fa-facebook-f facebook-icon"></i></a></li>
-                        <li><a href="#"><i class="fab fa-instagram instagram-icon"></i></a></li>
+                        <li><a href="https://www.facebook.com/Industrias-Axial-SAS-234099126707371"><i class="fab fa-facebook-f facebook-icon"></i></a></li>
+                        <li><a href="https://www.instagram.com/industriasaxial/"><i class="fab fa-instagram instagram-icon"></i></a></li>
                         <li><a href="#"><i class="fab fa-youtube youtube-icon"></i></a></li>
                     </ul>
                 </div>
@@ -103,47 +103,42 @@
                             <nav id="main-menu-2">
                                <ul class="main-menu-2">
                                     <li>
-                                        <a href="index-2.html">Home</a>
+                                        <a href="index.html">INICIO</a>
                                     </li>
                                    <li class="menu-item-has-children">
-                                       <a href="#">Blog</a>
+                                       <a href="#">NUESTROS PRODUCTOS</a>
                                        <ul class="sub-menu">
-                                           <li>
-                                               <a href="blog.html">Blog grid</a>
-                                           </li>
-                                           <li>
-                                               <a href="blog-single-left.html">Blog left sidebar</a>
-                                           </li>
-                                           <li>
-                                               <a href="blog-single-right.html">Blog right sidebar</a>
-                                           </li>
-                                           <li>
-                                               <a href="blog-single-without-sidebar.html">Blog widthout sidebar</a>
-                                           </li>
-                                           <li>
-                                               <a href="elements.html">Blog elements</a>
-                                           </li>
-                                           <li>
-                                               <a href="gallery.html">Gallery</a>
-                                           </li>
-                                       </ul>
-                                   </li>
-                                   <li class="menu-item-has-children">
-                                       <a href="#">Models</a>
-                                       <ul class="sub-menu">
-                                           <li>
-                                               <a href="models.html">Models page</a>
-                                           </li>
-                                           <li>
-                                               <a href="model-single.html">Models single</a>
-                                           </li>
-                                       </ul>
+                                        <li>
+                                            <a href="models.html">Todos</a>
+                                        </li>
+                                        <li>
+                                            <a href="model-singlea.html">Ambulancias</a>
+                                        </li>
+                                        <li>
+                                            <a href="model-single.html">Unidades Móviles de Salud</a>
+                                        </li>
+                                        <li>
+                                            <a href="model-single.html">Unidades de Captación de Sangre</a>
+                                        </li>
+                                        <li>
+                                            <a href="model-single.html">Unidades de Servicio Bomberil</a>
+                                        </li>
+                                        <li>
+                                            <a href="model-single.html">Unidades Policiales</a>
+                                        </li>
+                                        <li>
+                                            <a href="model-single.html">Unidades Unidades Especiales</a>
+                                        </li>
+                                        <li>
+                                            <a href="model-single.html">Servicios</a>
+                                        </li>
+                                    </ul>
                                    </li>
                                    <li>
-                                       <a href="about.html">About us</a>
+                                       <a href="about.html">NOSOTROS</a>
                                    </li>
                                    <li>
-                                       <a href="contact.html">Contact us</a>
+                                       <a href="contact.html">CONTACTO</a>
                                    </li>
                                </ul>
                             </nav>
@@ -182,15 +177,14 @@
                 <section class="page-introduction-widget">
                     <img src="assets/i/page_intr1.jpg" class="image-responsive wow fadeInLeft" data-wow-delay="700ms" alt="Contact page">
                     <div class="page-info fadeInRight wow" data-wow-delay="800ms">
-                        <h2 class="font_one">Contact</h2>
-                        <p>Meh synth Schlitz</p>
+                        <h2 class="font_one">CONTACTO</h2>
                     </div>
                 </section>
 
                 <section class="contact-section">
                     <div class="simple-page-heading">
-                        <h2 class="heading-title font_one wow fadeInLeftBig">Contact us</h2>
-                        <p class="heading-description font_one wow fadeInLeftBig" data-wow-delay="100ms">Contact Information</p>
+                        <h2 class="heading-title font_one wow fadeInLeftBig">COMUNICATE CON NOSOTROS</h2>
+                        <p class="heading-description font_one wow fadeInLeftBig" data-wow-delay="100ms">Información de Contacto</p>
                     </div>
                     <div class="contact-info-box">
                         <div class="contact-left-side">
@@ -199,54 +193,35 @@
                                     <table class="font_one wow fadeInUp" data-wow-delay="200ms">
                                         <tbody>
                                         <tr>
-                                            <th>AUSTIN OFFICE</th>
+                                            <th>Industrias Axial </th>
                                             <td>
                                                 <div>
-                                                    <span class="info-title">address:</span>
-                                                    <span class="info-data font_two">9604 North MoPac Expressway Suite 400</span>
+                                                    <span class="info-title">Dirección</span>
+                                                    <span class="info-data font_two">Calle 15 # 38-71 Acopi-Yumbo / Valle </span>
                                                 </div>
                                                 <div>
-                                                    <span class="info-title">Phone:</span>
-                                                    <span class="info-data font_two">+1 338-657-9432</span>
+                                                    <span class="info-title">PBX:</span>
+                                                    <span class="info-data font_two">+57 (2) 5242875</span>
+                                                </div>
+                                                <div>
+                                                    <span class="info-title">Celular</span>
+                                                    <span class="info-data font_two">(+57) 315 468 7356</span>
                                                 </div>
                                                 <div>
                                                     <span class="info-title">E-mail:</span>
-                                                    <span class="info-data font_two">elmaks-theme@supperbcode.net</span>
+                                                    <a class="info-data font_two" href="mailto:info@industriasaxial.com">info@industriasaxial.com</a>
                                                 </div>
                                             </td>
                                         </tr>
                                         <tr>
-                                            <th>SAN FRANCISCO</th>
-                                            <td>
-                                                <div>
-                                                    <span class="info-title">address:</span>
-                                                    <span class="info-data font_two">45 Spear St, San Francisco, CA 7410</span>
-                                                </div>
-                                                <div>
-                                                    <span class="info-title">Phone:</span>
-                                                    <span class="info-data font_two">+1 215-763-2020    </span>
-                                                </div>
-                                                <div>
-                                                    <span class="info-title">E-mail:</span>
-                                                    <span class="info-data font_two">electront-theme@supperbcode.net</span>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th>Social media</th>
+                                            <th>Redes Sociales</th>
                                             <td>
                                                 <ul class="social-profiles-list">
                                                     <li>
-                                                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                                        <a href="https://www.facebook.com/Industrias-Axial-SAS-234099126707371"><i class="fab fa-facebook-f"></i></a>
                                                     </li>
                                                     <li>
-                                                        <a href="#"><i class="fab fa-twitter"></i></a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#"><i class="fab fa-instagram"></i></a>
+                                                        <a href="https://www.instagram.com/industriasaxial/"><i class="fab fa-instagram"></i></a>
                                                     </li>
                                                 </ul>
                                             </td>
