--- a/models.html
+++ b/models.html
@@ -498,7 +498,7 @@
 
         <!-- Footer -->
         <footer id="footer">
-            <img src="assets/i/footer_img1.jpg" class="footer_img wow slideInRight" data-wow-duration="1000ms" data-wow-delay="200ms" alt="Elmaks">
+            <img src="assets/i/footer_img1.jpg" width="400px" height="auto" class="footer_img wow slideInRight" data-wow-duration="1000ms" data-wow-delay="200ms" alt="Elmaks">
         
             <section class="footer-top">
                 <div class="footer-top-wrap">
