--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                         <a href="index.html">INICIO</a>
                                     </li>
                                     <li class="menu-item-has-children">
-                                        <a href="#"> NUESTROS PRODUCTOS</a>
+                                        <a href="models.html"> NUESTROS PRODUCTOS</a>
                                         <ul class="sub-menu">
                                             <li>
                                                 <a href="models.html">Todos</a>
@@ -1024,27 +1024,49 @@
                 <div id='test-drive-inner' class="bg-white default-popup">
                     <img src="assets/i/popup/close.png" class="close-btn-popup" alt="Close popup button">
                     <div class="popup-heading">
-                        <h2 class="heading-title font_ono">Order test drive</h2>
-                        <p class="heading-description font_one">Please leave your contact information</p>
+                        <h2 class="heading-title font_ono">SOLICITA TU COTIZACIÓN</h2>
+                        <p class="heading-description font_one">Por favor diligencia tu información personal</p>
                     </div>
             
                     <form action="http://html.superbcode.net/" method="post" class="default-popup-form test-drive-form">
                         <div class="form-row">
-                            <label for="name-user" class="font_one">Enter your name *</label>
+                            <label for="name-user" class="font_one">NOMBRE *</label>
                             <input type="text" name="name-user" id="name-user" class="font_two" value="" placeholder="">
                         </div>
                         <div class="form-row">
-                            <label for="phone-user" class="font_one">Your phone *</label>
+                            <label for="phone-user" class="font_one">TELÉFONO DE CONTACTO*</label>
                             <input type="text" name="phone-user" id="phone-user" class="font_two" value="" placeholder="">
                         </div>
                         <div class="form-row">
-                            <label for="email-user" class="font_one">Your e-mail *</label>
+                            <label for="email-user" class="font_one">E-MAIL *</label>
                             <input type="text" name="email" id="email-user" class="font_two" value="" placeholder="">
+                        </div>
+                        <div class="form-row">
+                            <label for="Municipio" class="font_one">MUNICIPIO *</label>
+                            <input type="text" name="municipio" id="municipio" class="font_two" value="" placeholder="">
+                        </div>
+                        <div class="form-row">
+                            <label for="departamento" class="font_one">DEPARTAMENTO*</label>
+                            <input type="text" name="departamento" id="departamento" class="font_two" value="" placeholder="">
+                        </div>
+                        <div class="form-row">
+                            <label for="empresa" class="font_one">EMPRESA *</label>
+                            <input type="text" name="empresa" id="empresa" class="font_two" value="" placeholder="">
+                        </div>
+                        <div class="form-row">
+                            <label for="producto-requerido" class="font_one">PRODUCTO REQUERIDO *</label>
+                            <input type="text" name="producto" id="producto" class="font_two" value="" placeholder="">
                         </div>
                         <div class="form-row">
                             <div class="styled-checkbox-wrap">
                                 <input class="styled-checkbox" id="site-agreement-2" type="checkbox" value="">
-                                <label for="site-agreement-2"><span>I agree to the <a href="#">site agreement</a> for the processing of my personal data.</span></label>
+                                <label for="site-agreement-2"><span> Si he leído <a href="#">los terminos y condiciones</a> del manual de Políticas y Procedimientos (presionando <a href="#"> aqui</a>) para el Tratamiento de Datos Personales de INDUSTRIAS AXIAL S.A.S.</span></label>
+                            </div>
+                            <div class="form-row">
+                            <div class="styled-checkbox-wrap">
+                                <input class="styled-checkbox" id="site-agreement-2" type="checkbox" value="">
+                                <label for="site-agreement-2"><span>Autorizo y acepto que los datos personales suministrados a INDUSTRIAS AXIAL S.A.S. por medio de su página Web sean utilizados para las finalidades referidas.</span></label>
+                            </div>
                             </div>
                         </div>
                         <button class="font_one btn-disabled">Order test drive</button>
@@ -1080,7 +1102,7 @@
                                 </li>
                                 <li>
                                     <i class="fas fa-map-marker-alt"></i>
-                                    <span class="font_two">cALLE 15 # 38-71 Acopi - Yumbo / Valle del Cauca</span>
+                                    <span class="font_two">cALLE 15 # 38-71 Acopi - Yumbo / Valle </span>
                                 </li>
                                 <li>
                                     <i class="fas fa-envelope fz16"></i>
@@ -1137,7 +1159,7 @@
                 </div>
                 <nav class="footer-list wow fadeInUp" data-wow-delay="300ms">
                     <ul class="font_one">
-                        <li><a href="index-2.html">INICIO</a></li>
+                        <li><a href="index.html">INICIO</a></li>
                         <li><a href="about.html">NOSOTROS</a></li>
                         <li><a href="models.html">NUESTROS PRODUCTOS</a></li>
                         <li><a href="contact.html">CONTACTO</a></li>
